MP-54: fixed shoplist overflowing

--- a/client/assets/css/_blocks.scss
+++ b/client/assets/css/_blocks.scss
@@ -23,6 +23,7 @@
     height: 100%;
     left: 0;
     top: 0;
+    overflow-y: auto;
     .modal-content {
       height: 100%;
     }
